--- a/qbittorrent/qbittorrent-compose.yml
+++ b/qbittorrent/qbittorrent-compose.yml
@@ -2,11 +2,12 @@ services:
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:${QBITTORRENT_VERSION}
     container_name: qbittorrent
-    user: uid:gid
     environment:
       - TZ=${TZ}
       - WEBUI_PORT=${QBITTORRENT_WEBUI_PORT}
       - TORRENTING_PORT=${QBITTORRENT_TORRENTING_PORT}
+      - PUID=1000
+      - PGID=1000
     volumes:
       - ${QBITTORRENT_CONFIG_LOCATION}:/config
       - ${QBITTORRENT_DOWNLOADS_LOCATION}:/downloads
