A lot of content

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,12 @@ include:
   - path: ./immich/immich-compose.yml
   - path: ./jellyfin/jellyfin-compose.yml
   - path: ./nginx-proxy-manager/nginx-proxy-manager-compose.yml
+  - path: ./owncloud/owncloud-compose.yml
   - path: ./portainer/portainer-compose.yml
   - path: ./qbittorrent/qbittorrent-compose.yml
-  - path: ./seafile/seafile-compose.yml
   - path: ./vaultwarden/vaultwarden-compose.yml
+  - path: ./homepage/homepage-compose.yml
+
+networks:
+  media-server-network:
+    name: media-server-network
