--- a/jellyfin/jellyfin-compose.yml
+++ b/jellyfin/jellyfin-compose.yml
@@ -2,11 +2,6 @@ services:
   jellyfin:
     image: jellyfin/jellyfin:${JELLYFIN_VERSION}
     container_name: jellyfin
-    network_mode: "service:gluetun"
-    user: uid:gid
-    ports:
-      - ${JELLYFIN_PORT_TCP}:8096/tcp
-      - ${JELLYFIN_PORT_UDP}:7359/udp
     volumes:
       - ${JELLYFIN_CONFIG_LOCATION}:/config
       - ${JELLYFIN_CACHE_LOCATION}:/cache
@@ -15,20 +10,10 @@ services:
       - ${JELLYFIN_MUSIC_LOCATION}:/data/music
     environment:
       - TZ=${TZ}
+    networks:
+      - media-server-network
     restart: unless-stopped
 
-  gluetun:
-    image: qmcgaw/gluetun:latest
-    container_name: gluetun
-    restart: unless-stopped
-    ports:
-      - ${JELLYFIN_PORT_TCP}:${JELLYFIN_PORT_TCP}
-    cap_add:
-      - NET_ADMIN
-    devices:
-      - /dev/net/tun:/dev/net/tun
-    volumes:
-      - ./gluetunconf:/gluetun
-    environment:
-      - VPN_SERVICE_PROVIDER=
-      - VPN_TYPE=
+networks:
+  media-server-network:
+    name: media-server-network
