--- a/portainer/portainer-compose.yml
+++ b/portainer/portainer-compose.yml
@@ -7,7 +7,10 @@ services:
     volumes:
       - ${DOCKER_SOCK}:/var/run/docker.sock
       - ${PORTAINER_DATA_LOCATION}:/data
-    ports:
-      - "${PORTAINER_HTTP_PORT}:8000"
-      - "${PORTAINER_HTTPS_PORT}:9443"
+    networks:
+      - media-server-network
     restart: always
+
+networks:
+  media-server-network:
+    name: media-server-network
